--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -14,6 +14,10 @@ uvicorn = {extras = ["standard"], version = "*"}
 prisma = "*"
 psycopg[binary] = "*"
 pytest = {optional = true}
+bcrypt = "*"
+pyjwt = "*"
+qdrant-client = "*"
+uv = "*"
 
 [tool.setuptools.packages.find]
 where = ["app"]
