feat: setup base

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,8 +1,19 @@
 # Database
-DATABASE_URL=postgresql://altai:altai@localhost:5432/altai
+POSTGRES_USER=altai
+POSTGRES_PASSWORD=altai
+POSTGRES_DB=digital-twin
+DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@localhost:5432/${POSTGRES_DB}
 
 # Vector DB placeholder
-VECTOR_DB_URL=
+VECTOR_DB_URL=http://localhost:6333
 
 # Prisma client env
 # PRISMA_ENDPOINT=
+
+# pgAdmin defaults (change in production)
+PGADMIN_DEFAULT_EMAIL=admin@local
+PGADMIN_DEFAULT_PASSWORD=admin
+
+# Auth defaults
+JWT_SECRET_KEY=change-me-to-a-secure-random-key
+CLIENT_URL=http://localhost:3000
