--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -3,10 +3,11 @@ version: "3.8"
 services:
   db:
     image: postgres:15
+    env_file: .env
     environment:
-      POSTGRES_USER: altai
-      POSTGRES_PASSWORD: altai
-      POSTGRES_DB: altai
+      POSTGRES_USER: ${POSTGRES_USER:-altai}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-altai}
+      POSTGRES_DB: ${POSTGRES_DB:-altai}
     ports:
       - "5432:5432"
     volumes:
@@ -15,11 +16,27 @@ services:
   # Optional vector DB using Qdrant - this is our chosen vector store
   qdrant:
     image: qdrant/qdrant:latest
+    env_file: .env
     ports:
       - "6333:6333"
     volumes:
       - qdrant-data:/qdrant/storage
 
+  pgadmin:
+    image: dpage/pgadmin4:latest
+    env_file: .env
+    environment:
+      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL:-admin@local}
+      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD:-admin}
+    ports:
+      - "8080:80"
+    depends_on:
+      - db
+    volumes:
+      - pgadmin-data:/var/lib/pgadmin
+    restart: always
+
 volumes:
   db-data:
   qdrant-data:
+  pgadmin-data:
