--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -6,18 +6,27 @@ build-backend = "setuptools.build_meta"
 name = "altai-digital-twin-backend"
 version = "0.1.0"
 description = "Backend for Altai Digital Twin — Python + FastAPI + Prisma"
+readme = "README.md"
+requires-python = ">=3.10"
 
-[project.dependencies]
-python-dotenv = "*"
-fastapi = "*"
-uvicorn = {extras = ["standard"], version = "*"}
-prisma = "*"
-psycopg[binary] = "*"
-pytest = {optional = true}
-bcrypt = "*"
-pyjwt = "*"
-qdrant-client = "*"
-uv = "*"
+dependencies = [
+    "python-dotenv",
+    "fastapi",
+    "uvicorn[standard]",
+    "prisma",
+    "psycopg[binary]",    # extras must be in string format
+    "bcrypt",
+    "pyjwt",
+    "qdrant-client",
+    "uv",
+]
+
+[project.optional-dependencies]
+tests = [
+    "pytest",
+    "pytest-asyncio",
+    "httpx",
+]
 
 [tool.setuptools.packages.find]
 where = ["app"]
