--- a/backend/.env.example
+++ b/backend/.env.example
@@ -17,3 +17,10 @@ PGADMIN_DEFAULT_PASSWORD=admin
 # Auth defaults
 JWT_SECRET_KEY=change-me-to-a-secure-random-key
 CLIENT_URL=http://localhost:3000
+
+# S3 / MinIO
+S3_ENDPOINT=http://localhost:9000
+S3_ACCESS_KEY=minioadmin
+S3_SECRET_KEY=minioadmin
+S3_BUCKET_NAME=audios
+S3_REGION=us-east-1
