--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "boto3>=1.41.5",
     "python-multipart>=0.0.20",
     "pydantic-settings>=2.12.0",
+    "langchain-google-genai>=3.2.0",
 ]
 
 [project.optional-dependencies]
