--- a/backend/.env.example
+++ b/backend/.env.example
@@ -24,3 +24,6 @@ S3_ACCESS_KEY=minioadmin
 S3_SECRET_KEY=minioadmin
 S3_BUCKET_NAME=audios
 S3_REGION=us-east-1
+
+# ElevenLabs
+ELEVENLABS_API_KEY=your-elevenlabs-api-key
