--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,12 +4,6 @@ POSTGRES_PASSWORD=altai
 POSTGRES_DB=digital-twin
 DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@localhost:5432/${POSTGRES_DB}
 
-# Vector DB placeholder
-VECTOR_DB_URL=http://localhost:6333
-
-# Prisma client env
-# PRISMA_ENDPOINT=
-
 # pgAdmin defaults (change in production)
 PGADMIN_DEFAULT_EMAIL=admin@local
 PGADMIN_DEFAULT_PASSWORD=admin
@@ -27,3 +21,18 @@ S3_REGION=us-east-1
 
 # ElevenLabs
 ELEVENLABS_API_KEY=your-elevenlabs-api-key
+
+# LLM / GenAI settings
+# API key for the LLM provider (required for production/testing against cloud models)
+LLM_API_KEY=change-me-to-a-secure-random-key
+# Optional: endpoint override if using a proxy or private LLM endpoint
+LLM_API_URL=
+# Optional model overrides (defaults exist in code)
+CHAT_MODEL=gemini-3-pro-preview
+EMBEDDING_MODEL=text-embedding-004
+
+# Vector DB / embeddings
+# Qdrant connection URL (must include host and port), e.g. http://localhost:6333
+VECTOR_DB_URL=http://localhost:6333
+# Embedding/vector size (REQUIRED) — set to the embedding dimension used by your model
+VECTOR_SIZE=768
