--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,8 +1,15 @@
+# Environment
+ENV=development
+
 # Database
 POSTGRES_USER=altai
 POSTGRES_PASSWORD=altai
 POSTGRES_DB=digital-twin
 DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@localhost:5432/${POSTGRES_DB}
+DB_PORT=5432
+
+# Server Configuration
+SERVER_PORT=8080
 
 # Vector DB placeholder
 VECTOR_DB_URL=http://localhost:6333
@@ -11,7 +18,7 @@ VECTOR_DB_URL=http://localhost:6333
 # PRISMA_ENDPOINT=
 
 # pgAdmin defaults (change in production)
-PGADMIN_DEFAULT_EMAIL=admin@local
+PGADMIN_DEFAULT_EMAIL=admin@example.com
 PGADMIN_DEFAULT_PASSWORD=admin
 
 # Auth defaults
@@ -19,8 +26,8 @@ JWT_SECRET_KEY=change-me-to-a-secure-random-key
 CLIENT_URL=http://localhost:3000
 
 # S3 / MinIO
-S3_ENDPOINT=http://localhost:9000
-S3_ACCESS_KEY=minioadmin
-S3_SECRET_KEY=minioadmin
-S3_BUCKET_NAME=audios
+S3_ENDPOINT=http://localhost:9005
+S3_ACCESS_KEY=minio-admin
+S3_SECRET_KEY=Password1!
+S3_BUCKET_NAME=digital-app-media
 S3_REGION=us-east-1
